# COW-Filesystem

./: .gitignore  .pre-commit-config.yaml  COW_Filesystem_SRD.md  README.md  RELEASE.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish-testpypi.yml  publish.yml
docs/: architecture.md  cli.md  index.md  release.md  testing.md  troubleshooting.md
src/cowfs/: __init__.py  cli.py  fuse_handler.py  metadata.py  object_store.py
tests/: conftest.py  e2e_test.sh
tests/integration/: test_restore_gc_flow.py
tests/stress/: test_write_stress.py
tests/unit/: test_cli_diff.py  test_cli_gc.py  test_cli_misc.py  test_cli_mount_umount.py  test_cli_snapshot.py  test_fuse_cache.py  test_metadata.py  test_object_store.py  test_package_version.py
