[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cowfs"
version = "0.2.4"
description = "Copy-on-Write Filesystem - a FUSE-based versioning filesystem"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Atikul Islam Munna" },
]
keywords = ["filesystem", "fuse", "copy-on-write", "versioning", "deduplication"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Filesystems",
]
dependencies = [
    "pyfuse3>=3.3.0",
    "trio>=0.22.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3.0",
    "mypy>=1.8",
    "pre-commit>=3.6",
    "black>=24.0",
]
blake3 = [
    "blake3>=0.4.0",
]

[project.scripts]
cowfs = "cowfs.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/cowfs"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["cowfs.fuse_handler"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
omit = [
    "src/cowfs/fuse_handler.py",
]
